fixed spacing

--- a/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
+++ b/src/app/fyle/add-edit-expense/add-edit-expense.page.scss
@@ -607,6 +607,7 @@
     color: $red;
     line-height: 16px;
     font-size: 12px;
+    margin-top: -12px;
   }
 
   &--amount-error {
